ISPN-12532 fix yaml formatting

--- a/documentation/asciidoc/topics/ref_anti_affinity.adoc
+++ b/documentation/asciidoc/topics/ref_anti_affinity.adoc
@@ -9,18 +9,7 @@ The following is the anti-affinity strategy that {ispn_operator} uses if you do 
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-spec:
-  affinity:
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100 <1>
-        podAffinityTerm:
-          labelSelector:
-            matchLabels:
-              app: infinispan-pod
-              clusterName: <cluster_name>
-              infinispan_cr: <cluster_name>
-          topologyKey: "kubernetes.io/hostname" <2>
+include::yaml/affinity_nodes_prefer.yaml[]
 ----
 <1> Sets the hostname strategy as most preferred.
 <2> Schedules {brandname} replica pods on different {k8s} nodes.
@@ -29,16 +18,7 @@ spec:
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-spec:
-  affinity:
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution: <1>
-      - labelSelector:
-        matchLabels:
-        - app: infinispan-pod
-          clusterName: <cluster_name>
-          infinispan_cr: <cluster_name>
-        topologyKey: "topology.kubernetes.io/hostname"
+include::yaml/affinity_nodes_require.yaml[]
 ----
 <1> {k8s} does not schedule {brandname} pods if there are no different nodes available.
 
@@ -54,26 +34,7 @@ The following example prefers multiple zones when scheduling pods:
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-spec:
-  affinity:
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100 <1>
-        podAffinityTerm:
-          labelSelector:
-            matchLabels:
-            - app: infinispan-pod
-              clusterName: <cluster_name>
-              infinispan_cr: <cluster_name>
-          topologyKey: "topology.kubernetes.io/zone" <2>
-      - weight: 90 <3>
-        podAffinityTerm:
-          labelSelector:
-            matchLabels:
-            - app: infinispan-pod
-              clusterName: <cluster_name>
-              infinispan_cr: <cluster_name>
-          topologyKey: "kubernetes.io/hostname" <4>
+include::yaml/affinity_zones_prefer.yaml[]
 ----
 <1> Sets the zone strategy as most preferred.
 <2> Schedules {brandname} replica pods across multiple zones.
@@ -84,15 +45,6 @@ spec:
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-spec:
-  affinity:
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution: <1>
-      - labelSelector:
-        matchLabels:
-        - app: infinispan-pod
-          clusterName: <cluster_name>
-          infinispan_cr: <cluster_name>
-        topologyKey: "topology.kubernetes.io/zone"
+include::yaml/affinity_zones_require.yaml[]
 ----
 <1> Uses the zone strategy only when scheduling {brandname} replica pods.
