--- a/documentation/asciidoc/topics/proc_retrieving_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_retrieving_credentials.adoc
@@ -4,7 +4,7 @@ Get credentials from authentication secrets to access {brandname} clusters.
 
 .Procedure
 
-* Retrieve credentials from authentication secrets, as in the following example:
+* Retrieve credentials from authentication secrets.
 +
 [source,options="nowrap",subs=attributes+]
 ----
