--- a/documentation/asciidoc/topics/proc_adding_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_credentials.adoc
@@ -4,16 +4,30 @@ Configure access to {brandname} cluster endpoints with custom credentials.
 
 .Procedure
 
-. Define custom credentials in an `identities.yaml` file.
-. Create an authentication secret from `identities.yaml` as follows:
+. Create an `identities.yaml` file with the credentials that you want to add.
++
+[source,yaml,options="nowrap",subs=attributes+]
+----
+credentials:
+- username: testuser
+  password: testpassword
+- username: operator
+  password: supersecretoperatorpassword
+----
++
+[IMPORTANT]
+====
+`identities.yaml` must include the **operator** user.
+====
++
+. Create an authentication secret from `identities.yaml`.
 +
 [source,options="nowrap",subs=attributes+]
 ----
 $ {oc_create} secret generic --from-file=identities.yaml connect-secret
 ----
 +
-. Specify the authentication secret with `spec.security.endpointSecretName` in
-your `Infinispan` CR and then apply the changes.
+. Specify the authentication secret with `spec.security.endpointSecretName` in your `Infinispan` CR and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
