--- a/documentation/asciidoc/topics/proc_configuring_sites_manually.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_manually.adoc
@@ -4,15 +4,13 @@ Specify static hosts and ports for {brandname} clusters so they can establish co
 
 .Prerequisites
 
-* Ensure that you have the correct hosts and port numbers for each {brandname} cluster that you plan to configure as a backup location.
+* Have the host names and ports for each {brandname} cluster that you plan to configure as a backup location.
 
 .Procedure
 
 . Create an `Infinispan` CR for each {brandname} cluster.
 . Specify the name of the local site with `spec.service.sites.local.name`.
-. Provide the name and static URL for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
-+
-The following are example `Infinispan` CR definitions for **LON** and **NYC**:
+. Provide the name and static URL for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`, for example:
 +
 * **LON**
 +
