--- a/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
@@ -17,7 +17,7 @@ your `Infinispan` CR and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
-include::yaml_annotated/cr_auth.yaml[]
+include::yaml/cr_auth.yaml[]
 ----
 +
 <1> Specifies the name of the authentication secret that contains your
