--- a/documentation/asciidoc/stories/assembly_creating_services.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_services.adoc
@@ -14,6 +14,10 @@ include::{topics}/ref_cacheservice_resources.adoc[leveloffset=+2]
 include::{topics}/proc_creating_dg_service.adoc[leveloffset=+1]
 include::{topics}/ref_datagridservice_resources.adoc[leveloffset=+2]
 
+//Labelling
+include::{topics}/proc_adding_custom_labels.adoc[leveloffset=+1]
+include::{topics}/ref_label_environment_variables.adoc[leveloffset=+2]
+
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
